src/styles/subsocial.scss
/* ... */
.text.muted,
.text.grey {
  color: $color_muted;
}

.text.smaller {
  font-size: $font_small;
}

.Df--AddressComponents-details {
  color: $color_muted !important;
  font-size: $font_small;
  font-weight: normal;
}

.ui--AddressComponents {
  display: flex;

  .ui--IdentityIcon {
    margin-left: 0;
    margin-right: $space_small;
  }

  .AddressComponents.follow {
    float: right;

    .button {
      margin: 0;
    }
  }

  .ui--AddressComponents-info {
    display: flex;
    align-items: center;
  }

  .Df--AddressComponents-details {
    display: block;
  }

  .ui--AddressSummary-name,
  .ui--AddressSummary-balance {
    display: inline-flex;
    padding-top: 0;
    margin-right: 0 !important;
    font-size: $font_small !important;
    margin-right: $space_normal;
    color: $color_muted;
  }
}

.DfSection {
  .viewspace-minipreview {
    display: flex;
    justify-content: space-between;
    width: 70%;
  }

  .DfSection-title {
    border-bottom: 1px solid $color_light_border;
    display: flex;
    align-items: center;
  }

  li.ant-list-item.ant-list-item-no-flex {
    border: none;
    padding: 0;

    .DfCommentSection & {
      padding-top: $space_tiny;
    }
  }
}

.DfSectionOuterContainer {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  gap: $space_normal;
  max-width: $max_width_page;
  padding: 0 $space_normal;
  margin: 0 auto;
}

@media (min-width: 767px) {
  .DfSectionOuter {
    min-width: $min_width_content;
    flex: 1;
    padding-bottom: 0;
    position: relative;
    z-index: 0;

    &.DfSectionLarger {
      max-width: calc(890px + #{$space_normal} * 2);
    }

    .DfSectionOuter {
      width: 100%;
    }
  }

  .DfSection {
    margin: 0;
  }
}

.DfForm .ui--Labelled {
  align-items: end;

  & > label {
    padding-top: $space_small;
  }
}

.ui.top.left.flowing.popup.transition.visible {
  .ui--AddressComponents-address {
    font-size: $font_large;
  }

  .Df--AddressComponents-details {
    margin-right: $space_mini;
  }
}

.DfAvatar {
  display: inline-block;
  border-radius: 50%;
  vertical-align: middle;
  border: 1px solid $color_light_border;
  background-color: white;

  &.space {
    margin-right: $space_tiny;
  }
}

.ui.top.left.flowing.popup.transition.visible {
  .DfAvatar {
    margin: 0 $space_tiny $space_tiny 0;
  }
}

.ProfileDetails.DfPreview {
  display: flex;
  align-items: center;
  height: stretch;
}

.DfPopup-handle {
  font-size: $font_normal !important;
  color: #4e4e4e;
  margin: $space_mini 0;
}

.DfPopup-about {
  margin: $space_tiny 0;
}

.DfPopup-links {
  color: $color_muted;
  display: flex;
  justify-content: flex-start;
  margin: 0;
  margin-bottom: $space_tiny;

  .DfPopup-link {
    font-size: $font_normal;
    margin-right: $space_normal;
    @extend .DfGreyLink;
  }
}

.DfMdEditor {
  .CodeMirror {
    font-size: 1rem;
    padding: 6.5px 11px; /* padding from ant design input */

    @media screen and (min-width: $max_mobile_width) {
      resize: vertical !important;
    }
  }

  .CodeMirror-scroll {
    min-height: 5rem !important;
  }

  .CodeMirror.cm-s-easymde.CodeMirror-wrap.CodeMirror-fullscreen {
    z-index: 1000;
  }

  .markdown-body {
    a {
      color: $color_link !important;
    }

    background-color: #fff !important;
    padding: $space_mini !important;
  }

  &.hideToolbar {
    .editor-toolbar {
      display: none;
    }

    .CodeMirror {
      border-radius: $border_radius_normal;
    }
  }

  .editor-statusbar {
    padding: $space_mini 0;
    text-align: left;

    .upload-image {
      margin-left: 0;
      font-size: $font_small;
    }
  }
}

.DfMdEditor.error {
  .CodeMirror.cm-s-easymde.CodeMirror-wrap {
    background-color: #fff6f6;
    border-color: #e0b4b4;
  }

  .editor-toolbar {
    border-color: #e0b4b4;
  }
}

.ui.attached.tabular.menu {
  padding: 0 $space_huge;
}

.ant-btn {
  font-weight: $font_weight_medium;
}

.DfSearch {
  width: 450px;
  display: flex;
  margin: 0 $space_huge;

  .ant-input-search > .ant-input-group > .ant-input-group-addon {
    left: -1px;
    padding: 0;
    border: 0;
  }
  .ant-btn-icon-only {
    border-top-left-radius: 0 !important;
    border-bottom-left-radius: 0 !important;
  }

  .ant-input-affix-wrapper {
    height: 32px;
    padding: 2px 2px !important;
  }
}

.DfBgColor {
  background-color: $color_page_bg;
}

.DfHeader {
  background: #fff;
  padding: 0;
  border-bottom: 1px solid $color_light_border;
  position: fixed;
  z-index: 12;
  width: 100%;
  display: flex;
  justify-content: space-between;

  /* Fix black background of top menu in prod mode: */
  &.ant-layout-header {
    line-height: normal;
    background-color: #fff;
  }
}

.ant-layout {
  background-color: $color_page_bg;
}

.DfDataList {
  margin-top: $space_tiny;

  .DfSegment {
    margin: $space_normal 0;
  }

  .ant-list-pagination {
    display: flex;
    justify-content: center;
  }
}

.DfEmpty {
  padding: $space_big;
}

.DfTitle--List {
  display: flex;
  justify-content: space-between;
  width: 100%;
}

.DfSideMenu--FollowedSpaces {
  .SpaceMenuIcon {
    margin-left: -$space_mini;
  }

  &.collapsed {
    .MenuItemName {
      display: none;
    }
  }

  color: #666;
  cursor: pointer;

  .ant-menu-item-group-title {
    text-align: center;
    text-transform: uppercase;
    font-size: $font_small;
  }
}
/* ... */

